# ci_cd_pipeline

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: main.py
src/test/: test_email_validator.py
src/validators/: emailValidator.py
