[tool.poetry]
name = "ci-cd-pipeline"
version = "0.1.0"
description = "CI/CD pipeline"
authors = ["igorr-i <igor.idcarvalho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.1.1"
coverage = "^7.4.4"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
